--- a/app/src/main/res/layout/activity_cliente_option.xml
+++ b/app/src/main/res/layout/activity_cliente_option.xml
@@ -11,6 +11,9 @@
 
     <include layout="@layout/action_bar_toolbar"></include>
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
