--- a/app/src/main/res/layout/activity_login_cliente.xml
+++ b/app/src/main/res/layout/activity_login_cliente.xml
@@ -8,7 +8,9 @@
     android:fitsSystemWindows="true"
     tools:context=".client.LoginClientActivity">
 
-    <include layout="@layout/action_bar_toolbar"/>
+    <include
+        android:id="@+id/include_toolbar"
+        layout="@layout/action_bar_toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
