--- a/app/src/main/res/layout/activity_request_driver.xml
+++ b/app/src/main/res/layout/activity_request_driver.xml
@@ -6,49 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".client.RequestDriverActivity">
 
-    <LinearLayout
+    <com.github.florent37.shapeofview.shapes.ArcView
+        android:id="@+id/container_loading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="230dp"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shape_arc_cropDirection="outside"
+        app:shape_arc_height="20dp"
+        app:shape_arc_position="bottom">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animation_view"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_margin="30dp"
-            android:layout_gravity="center"
-            app:lottie_rawRes="@raw/carro_driver"
-            app:lottie_fileName="hello_world.json"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true" />
-
-        <TextView
-            android:id="@+id/textViewLookingFor"
+        <View
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="BUSCANDO CONDUCTOR..."
-            android:textSize="18sp"/>
-
-        <LinearLayout
-            android:id="@+id/linearlala"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:gravity="bottom">
-
-            <Button
-                android:id="@+id/btn_cancel_viaje"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CANCELAR VIAJE"
-                android:background="@drawable/rounded_button"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:textColor="#FFFFFF"
-                android:layout_margin="30dp"/>
-        </LinearLayout>
+            android:background="@color/colorPrimaryDark" />
 
 
-    </LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_margin="30dp"
+            android:scaleType="centerCrop"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="search_driver.json"
+            app:lottie_imageAssetsFolder="assets"
+            app:lottie_loop="true" />
+
+    </com.github.florent37.shapeofview.shapes.ArcView>
+
+    <TextView
+        android:id="@+id/textViewLookingFor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:text="BUSCANDO CONDUCTOR..."
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/container_loading" />
+
+
+    <Button
+        android:id="@+id/btn_cancel_viaje"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:text="CANCELAR VIAJE"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
