--- a/app/src/main/res/layout/activity_login_cliente.xml
+++ b/app/src/main/res/layout/activity_login_cliente.xml
@@ -12,18 +12,36 @@
         android:id="@+id/include_toolbar"
         layout="@layout/action_bar_toolbar" />
 
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="150dp"
-            app:srcCompat="@drawable/logo" />
+        <com.github.florent37.shapeofview.shapes.ArcView
+            android:id="@+id/container_loading"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:elevation="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shape_arc_cropDirection="outside"
+            app:shape_arc_height="20dp"
+            app:shape_arc_position="bottom">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animation_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:lottie_rawRes="@raw/googlesigin"
+                app:lottie_loop="true"
+                app:lottie_autoPlay="true" />
+
+        </com.github.florent37.shapeofview.shapes.ArcView>
 
         <TextView
             android:layout_width="match_parent"
@@ -51,4 +69,5 @@
 
     </LinearLayout>
 
+  </ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
