--- a/app/src/main/res/layout/activity_opcion_dual_driver.xml
+++ b/app/src/main/res/layout/activity_opcion_dual_driver.xml
@@ -17,16 +17,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
-        <ImageView
+        <com.github.florent37.shapeofview.shapes.ArcView
+            android:id="@+id/container_loading"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:elevation="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shape_arc_cropDirection="outside"
+            app:shape_arc_height="20dp"
+            app:shape_arc_position="bottom">
 
-            android:layout_width="166dp"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="70dp"
-            app:srcCompat="@drawable/logo" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animation_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:lottie_rawRes="@raw/animation_driverman"
+
+                app:lottie_loop="true"
+                app:lottie_autoPlay="true" />
+
+        </com.github.florent37.shapeofview.shapes.ArcView>
 
         <TextView
             android:layout_width="match_parent"
