--- a/app/src/main/res/layout/activity_registro_driver_primer.xml
+++ b/app/src/main/res/layout/activity_registro_driver_primer.xml
@@ -25,10 +25,12 @@
                 android:layout_marginTop="70dp"
                 android:gravity="center"
 
-                android:text="Registro Conductor"
+                android:text="Registro Conductora"
                 android:textColor="#020101"
                 android:textSize="26dp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold">
+
+            </TextView>
             <!--LineARLayout es donde empieza el contenido-->
 
             <!--Otro Bloque estabamos que nos webeabamos_XD-->
@@ -164,14 +166,29 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/textoFechaNac"
-                        android:layout_width="match_parent"
+                        android:layout_width="185dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Fecha Nacimiento"
                         android:inputType="datetime">
 
+
                     </com.google.android.material.textfield.TextInputEditText>
+
+                    <Button
+                        android:id="@+id/txtfecha"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="210dp"
+                        android:layout_marginTop="-50dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/rounded_button"
+                        android:backgroundTint="@color/colorPrimaryDark"
+                        android:text="Fecha"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16dp" />
+
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
